@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-23T08:18:31Z",
-  "count_outdated" : 948,
-  "uniques_outdated" : 595,
+  "timestamp" : "2023-08-24T01:03:47Z",
+  "count_outdated" : 949,
+  "uniques_outdated" : 596,
   "count" : 971,
   "uniques" : 612,
   "clones" : [
-    {
-      "timestamp": "2023-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-10T00:00:00Z",
       "count": 2,
